sesamedisk/jicofo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jicofo
  namespace: jitsi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jicofo
  template:
    metadata:
      labels:
        app: jicofo
    spec:
      containers:
        - name: jicofo
          image: jitsi/jicofo:stable-7001 #5076 working one
          imagePullPolicy: IfNotPresent
