sesamedisk/jvb-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jvb
  namespace: jitsi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jvb
  template:
    metadata:
      labels:
        app: jvb
    spec:
      containers:
        - name: jvb
          ports:
          - containerPort: 30300
            protocol: UDP
          - containerPort: 9090        
          image: jitsi/jvb:stable-7001
          resources: 
            limits:
               memory: "2G"
               cpu: "2"
            requests:
               memory: "1G"
               cpu: "1"
          imagePullPolicy: IfNotPresent
