sesamedisk/prosody-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prosody
  namespace: jitsi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prosody
  template:
    metadata:
      labels:
        app: prosody
    spec:
      containers:
        - name: prosody
          image: jitsi/prosody:stable-7001
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 5222
          - containerPort: 5280
          - containerPort: 5347
          - containerPort: 5269
