sesamedisk/web-develop.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jitsi-web
  namespace: jitsi
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jitsi-web
  template:
    metadata:
      labels:
        app: jitsi-web
    spec:
      containers:
        - name: jitsi-web
          ports:
          - containerPort: 80
          - containerPort: 443
          image: jitsi/web:stable-7001
          imagePullPolicy: IfNotPresent
