sesamedisk/jvb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jvb
  namespace: jitsi
spec:
  type: NodePort
  externalTrafficPolicy: Cluster
  ports:
  - name: "30300"
    port: 30300
    protocol: UDP
    targetPort: 30300
    nodePort: 30300
  - name: "4443"
    port: 4443
    targetPort: 4443  
  - name: "9090"
    port: 9090
    targetPort: 9090 
  selector:
    app: jvb
