sesamedisk/prosody-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prosody
  namespace: jitsi
spec:
  type: ClusterIP
  ports:
  - name: "5222"
    port: 5222
    targetPort: 5222
  - name: "5347"
    port: 5347
    targetPort: 5347
  - name: "5280"
    port: 5280
    targetPort: 5280
  selector:
    app: prosody
