sesamedisk/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jitsi-web
  namespace: jitsi
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: https
    port: 443
    targetPort: 443
  selector:
    app: jitsi-web
